<resources>
    <string name="app_name">LINE Sticker Keyboard</string>

    <string name="loading">LOADING</string>
    <string name="error">ERROR</string>
    <string name="delete">DELETE</string>

    <string-array name="settings_array">
        <item>@string/setting_list_0</item>
        <item>@string/setting_list_1</item>
    </string-array>

    <string-array name="main_activity_list">
        <item>@string/main_activity_list_0</item>
        <item>@string/main_activity_list_1</item>
<!--        <item>@string/main_activity_list_2</item>-->
        <item>@string/main_activity_list_3</item>
        <item>@string/main_activity_list_4</item>
        <item>@string/main_activity_list_5</item>
        <item>@string/main_activity_list_6</item>
    </string-array>
    <string name="title_edit_activity">My Collections</string>
    <string name="title_activity_fetch">Fetch Sticker</string>
    <string name="fetch_activity_toast">Your download will start shortly</string>
    <string name="main_activity_list_0">Enable keyboard</string>
    <string name="main_activity_list_1">Switch keyboard</string>
    <string name="main_activity_list_2">Theme</string>
    <string name="main_activity_list_3">My collections</string>
    <string name="main_activity_list_4">Clear History</string>
    <string name="main_activity_list_5">Feedback</string>
    <string name="main_activity_list_6">About/How-to</string>

    <string name="setting_list_0">Main Menu</string>
    <string name="setting_list_1">Switch Keyboard</string>
    <string name="not_supported">This app does not support media insertion from the keyboard</string>
    <string name="share">Share via</string>
    <string name="manual_add">Manual Add</string>
    <string name="store_id">Store ID</string>
    <string name="manual_add_store_id">Manual Add by Store ID</string>
    <string name="manual_add_store_id_description">Store ID is the numbers that appear in the LINE Store\'s URL, for example:\n<b>URL:</b> https://store.line.me/stickershop/product/5271/en\n<b>Store ID:</b> 5271\nSee the \"About/How-to\" for more info</string>
    <string name="use_fallback_url">Use fallback URL</string>
    <string name="use_fallback_url_description">If the download didn\'t work, redo with this option enabled</string>
    <string name="positive_confirm">Confirm</string>
    <string name="negative_cancel">Cancel</string>
    <string name="clear_history">This will clear your sticker history</string>
    <string name="delete_sticker">Delete this sticker pack</string>
    <string name="positive_agree">Agree</string>
    <string name="negative_disagree">Disagree</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_text">This app is not affiliated with, maintained, authorized,
        endorsed or sponsored by the LINE Corporation or any of their affiliates.
        We take no resposibility or liability for using this app.</string>
    <string name="disclaimer_toast">Please agree to our disclaimer</string>
    <string name="fetch_fetching">Fetching</string>
    <string name="fetch_downloading">Downloading</string>
    <string name="fetch_converting">Converting</string>
    <string name="fetch_completed">Operation completed</string>
    <string name="fetch_fetch_failed">Fetch failed</string>
    <string name="fetch_download_failed">Download failed</string>
    <string name="fetch_convert_failed">Convert failed</string>
    <string name="force_png">Sending this sticker as (A)PNG file</string>
    <string name="footer" translatable="false">LINEStickerKeyboard ver 1.3</string>
    <string name="channel_name">Download</string>

</resources>
